Added common modules

--- a/portal/apps/org.wso2.carbon.iam.portal.common/src/main/component.yaml
+++ b/portal/apps/org.wso2.carbon.iam.portal.common/src/main/component.yaml
@@ -5,6 +5,8 @@
 apis:
   - className: "org.wso2.is.portal.user.client.api.micro.ProfileImageDownloaderService"
     uri: "/profile-image-service/"
+  - className: "org.wso2.is.portal.user.client.api.micro.IdentityStoreClientMicroService"
+    uri: "/identityStore-micro-service/"
 #  - className: "org.wso2.is.portal.user.client.api.micro.IdentityStoreClientMicroService"
 #    uri: "/identityStore-micro-service/"
 
