search with wildcard support

--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -150,8 +150,8 @@ profiles:
    regex: "*"
    dataType: "email"
  -
-  profileName: "user-list"
-  isAdminProfile: false
+  profileName: "user-list-filter"
+  isAdminProfile: true
   claims:
   -
    claimURI: "http://wso2.org/claims/username"
