Inbound saml2sso artifact name change

--- a/pom.xml
+++ b/pom.xml
@@ -224,7 +224,7 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
-                <artifactId>org.wso2.carbon.identity.sso.saml.server.feature</artifactId>
+                <artifactId>org.wso2.carbon.identity.authenticator.inbound.saml2sso.feature</artifactId>
                 <version>${carbon.identity.saml.inbound.version}</version>
                 <type>zip</type>
             </dependency>
