--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity.authenticator.outbound.saml2sso</groupId>
-                <artifactId>org.wso2.carbon.identity.application.authenticator.samlsso.server.feature</artifactId>
+                <artifactId>org.wso2.carbon.identity.authenticator.outbound.saml2sso.feature</artifactId>
                 <version>${carbon.identity.saml.outbound.version}</version>
                 <type>zip</type>
             </dependency>
