--- a/tests/ui-tests/user-portal/pom.xml
+++ b/tests/ui-tests/user-portal/pom.xml
@@ -154,7 +154,7 @@
                                 <!--properties can be : headless, firefox, chrome, ie, opera-->
                                 <property>
                                     <name>driver</name>
-                                    <value>chrome</value>
+                                    <value>headless</value>
                                 </property>
                                 <property>
                                     <name>pathToChromeDriver</name>
