--- a/portal/client-services/org.wso2.is.portal.user.client.api/pom.xml
+++ b/portal/client-services/org.wso2.is.portal.user.client.api/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>msf4j-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wso2.msf4j</groupId>
+            <artifactId>msf4j-all</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.eclipse.osgi</groupId>
             <artifactId>org.eclipse.osgi.services</artifactId>
         </dependency>
@@ -90,7 +94,7 @@
             org.wso2.carbon.identity.claim.mapping.*;version="${org.wso2.carbon.identity.mgt.version.range}",
             org.wso2.carbon.uuf.spi.auth.*,
             org.wso2.carbon.kernel.utils.*,
-            org.wso2.msf4j;version="${msf4j.import.version.range}",
+            org.wso2.msf4j.*;version="${msf4j.import.version.range}",
             javax.ws.rs.*;version="${javax.ws.rs.import.version.range}",
             org.wso2.carbon.identity.recovery.*;version="${org.wso2.carbon.identity.mgt.version.range}",
             org.wso2.carbon.identity.policy.password.*;version="${org.wso2.carbon.identity.mgt.version.range}"
