--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.wso2</groupId>
@@ -135,6 +136,39 @@
                 <version>${org.wso2.carbon.identity.recovery.feature.version}</version>
                 <type>zip</type>
             </dependency>
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.feature</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.resource.feature</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
+                <artifactId>org.wso2.carbon.identity.auth.saml2.common.feature</artifactId>
+                <version>${carbon.identity.auth.saml2.common.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
+                <artifactId>org.wso2.carbon.identity.authenticator.inbound.saml2sso.feature</artifactId>
+                <version>${carbon.identity.saml.inbound.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.authenticator.outbound.saml2sso</groupId>
+                <artifactId>org.wso2.carbon.identity.authenticator.outbound.saml2sso.feature</artifactId>
+                <version>${carbon.identity.saml.outbound.version}</version>
+                <type>zip</type>
+            </dependency>
+
+
             <dependency>
                 <groupId>org.wso2.carbon.deployment</groupId>
                 <artifactId>org.wso2.carbon.deployment.engine</artifactId>
@@ -823,6 +857,97 @@
                 <type>zip</type>
                 <version>${org.wso2.carbon.identity.event.handler.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.wso2.orbit.org.opensaml</groupId>
+                <artifactId>opensaml</artifactId>
+                <version>${opensaml2.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.org.owasp.encoder</groupId>
+                <artifactId>encoder</artifactId>
+                <version>${encoder.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+                <version>${wso2.xerces.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.ws.security.wso2</groupId>
+                <artifactId>wss4j</artifactId>
+                <version>${wss4j.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec.wso2</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>${httpcomponents-httpclient.wso2.version}</version>
+            </dependency>
+
+            <!-- gateway dependencies -->
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.api</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.common</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.resource</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
+                <artifactId>org.wso2.carbon.identity.auth.saml2.common</artifactId>
+                <version>${carbon.identity.saml.inbound.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
+                <artifactId>org.wso2.carbon.identity.authenticator.inbound.saml2sso</artifactId>
+                <version>${carbon.identity.saml.inbound.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.authenticator.outbound.saml2sso</groupId>
+                <artifactId>org.wso2.carbon.identity.authenticator.outbound.saml2sso</artifactId>
+                <version>${carbon.identity.saml.outbound.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.mgt</groupId>
+                <artifactId>in-memory-connectors-test-artifact</artifactId>
+                <version>${org.wso2.carbon.identity.mgt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.msf4j</groupId>
+                <artifactId>jaxrs-delegates</artifactId>
+                <version>${msf4j.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -872,9 +997,10 @@
         <org.wso2.carbon.identity.mgt.version>0.1.38</org.wso2.carbon.identity.mgt.version>
         <carbon.osgi.test.util.version>5.1.0</carbon.osgi.test.util.version>
         <org.wso2.carbon.identity.recovery.feature.version>0.1.38</org.wso2.carbon.identity.recovery.feature.version>
-        <org.wso2.carbon.identity.commons.feature.version>0.1.23</org.wso2.carbon.identity.commons.feature.version>
-        <org.wso2.carbon.identity.commons.version>0.1.23</org.wso2.carbon.identity.commons.version>
-        <org.wso2.carbon.identity.inbound.provisioning.scim2.version>2.0.15</org.wso2.carbon.identity.inbound.provisioning.scim2.version>
+        <org.wso2.carbon.identity.commons.feature.version>0.1.24</org.wso2.carbon.identity.commons.feature.version>
+        <org.wso2.carbon.identity.commons.version>0.1.24</org.wso2.carbon.identity.commons.version>
+        <org.wso2.carbon.identity.inbound.provisioning.scim2.version>2.0.15
+        </org.wso2.carbon.identity.inbound.provisioning.scim2.version>
 
         <carbon.uuf.version>1.0.0-m12</carbon.uuf.version>
         <carbon-uuf-maven-plugin.version>1.0.0-m11</carbon-uuf-maven-plugin.version>
@@ -882,6 +1008,20 @@
         <carbon.security.version>1.0.1</carbon.security.version>
         <carbon.metrics.version>2.0.0</carbon.metrics.version>
         <org.wso2.carbon.lcm.version>1.0.0</org.wso2.carbon.lcm.version>
+
+        <carbon.identity.gateway.version>0.1.1</carbon.identity.gateway.version>
+        <carbon.identity.saml.inbound.version>6.0.0-m1</carbon.identity.saml.inbound.version>
+        <carbon.identity.saml.outbound.version>6.0.0-m1</carbon.identity.saml.outbound.version>
+        <carbon.identity.auth.saml2.common.version>6.0.0-m1</carbon.identity.auth.saml2.common.version>
+
+        <opensaml2.wso2.version>2.6.4.wso2v4</opensaml2.wso2.version>
+        <encoder.wso2.version>1.2.0.wso2v2</encoder.wso2.version>
+        <wso2.xerces.version>2.8.1.wso2v3</wso2.xerces.version>
+        <wss4j.wso2.version>1.5.11.wso2v16</wss4j.wso2.version>
+        <commons.codec.version>1.4.0.wso2v1</commons.codec.version>
+        <httpcomponents-httpclient.wso2.version>3.1.0.wso2v3</httpcomponents-httpclient.wso2.version>
+        <json.version>20160810</json.version>
+        <bouncycastle.version>1.52.0.wso2v1</bouncycastle.version>
 
         <!--3rd party related properties-->
         <commons-beanutils.wso2.version>1.8.0.wso2v1</commons-beanutils.wso2.version>
