--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/pom.xml
@@ -41,6 +41,14 @@
             <classifier>uuf-component</classifier>
         </dependency>
 
+        <dependency>
+            <groupId>org.wso2.is</groupId>
+            <artifactId>org.wso2.carbon.iam.portal.common</artifactId>
+            <version>${carbon.is.version}</version>
+            <type>zip</type>
+            <classifier>uuf-component</classifier>
+        </dependency>
+
         <!--UUF Themes-->
         <dependency>
             <groupId>org.wso2.carbon.uuf.common</groupId>
@@ -99,6 +107,7 @@
                                     org.wso2.is.portal.user.client.api,
                                     org.wso2.is.portal.user.client.api.micro,
                                     org.wso2.is.portal.user.client.api.bean,
+                                    org.wso2.is.portal.user.client.api.util,
                                     org.wso2.carbon.identity.recovery.*
                                 </Import-Package>
                             </instructions>
