--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -28,14 +28,14 @@
     <artifactId>org.wso2.carbon.iam.portal.parent</artifactId>
     <packaging>pom</packaging>
     <name>WSO2 IAM Portal - Parent</name>
-
     <description>IAM Portal</description>
     <url>http://wso2.org</url>
 
     <modules>
-        <module>client-services/org.wso2.is.portal.user.client.api</module>
-        <module>apps/org.wso2.carbon.iam.user-portal.app</module>
+        <module>apps/org.wso2.carbon.iam.portal.common</module>
         <module>apps/org.wso2.carbon.iam.admin-portal.app</module>
+        <module>apps/org.wso2.carbon.iam.user-portal.app</module>
+        <module>client-services/org.wso2.is.portal.user.client.api</module>
     </modules>
 
 </project>
