Resolved PR comments

--- a/tests/ui-tests/admin-portal/pom.xml
+++ b/tests/ui-tests/admin-portal/pom.xml
@@ -176,6 +176,10 @@
                                 <name>password</name>
                                 <value>admin</value>
                             </property>
+                            <property>
+                                <name>timeout</name>
+                                <value>50</value>
+                            </property>
                         </systemProperties>
                         <suiteXmlFiles>
                             <suiteXmlFile>${project.basedir}/src/test/resources/testng.xml</suiteXmlFile>
