--- a/portal/client-services/org.wso2.is.portal.user.client.api/pom.xml
+++ b/portal/client-services/org.wso2.is.portal.user.client.api/pom.xml
@@ -45,10 +45,6 @@
             <artifactId>org.wso2.carbon.identity.mgt</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity.commons</groupId>
-            <artifactId>org.wso2.carbon.identity.commons</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.wso2.carbon.identity.mgt</groupId>
             <artifactId>org.wso2.carbon.identity.claim</artifactId>
         </dependency>
@@ -60,6 +56,10 @@
         <dependency>
             <groupId>org.wso2.msf4j</groupId>
             <artifactId>msf4j-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.msf4j</groupId>
+            <artifactId>msf4j-all</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.eclipse.osgi</groupId>
@@ -75,6 +75,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.mgt</groupId>
+            <artifactId>org.wso2.carbon.identity.policy.password</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -85,15 +89,15 @@
             org.apache.commons.lang3.*,
             org.slf4j.*;version="${slf4j.import.version.range}",
             org.wso2.carbon.identity.mgt.*;version="${org.wso2.carbon.identity.mgt.version.range}",
-            org.wso2.carbon.identity.common.*;version="${org.wso2.carbon.identity.commons.version}",
             org.wso2.carbon.identity.claim.service.*;version="${org.wso2.carbon.identity.mgt.version.range}",
             org.wso2.carbon.identity.claim.exception.*;version="${org.wso2.carbon.identity.mgt.version.range}",
             org.wso2.carbon.identity.claim.mapping.*;version="${org.wso2.carbon.identity.mgt.version.range}",
             org.wso2.carbon.uuf.spi.auth.*,
             org.wso2.carbon.kernel.utils.*,
-            org.wso2.msf4j;version="${msf4j.import.version.range}",
+            org.wso2.msf4j.*;version="${msf4j.import.version.range}",
             javax.ws.rs.*;version="${javax.ws.rs.import.version.range}",
-            org.wso2.carbon.identity.recovery.*;version="${org.wso2.carbon.identity.mgt.version.range}"
+            org.wso2.carbon.identity.recovery.*;version="${org.wso2.carbon.identity.mgt.version.range}",
+            org.wso2.carbon.identity.policy.password.*;version="${org.wso2.carbon.identity.mgt.version.range}"
         </import.package>
         <!--//todo set versions-->
         <export.package>
