--- a/pom.xml
+++ b/pom.xml
@@ -1501,12 +1501,12 @@
     <properties>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.7.18</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.8.0-SNAPSHOT</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
         <identity.carbon.auth.saml2.version>5.2.1</identity.carbon.auth.saml2.version>
-        <identity.inbound.auth.saml.version>5.3.2</identity.inbound.auth.saml.version>
-        <identity.inbound.auth.oauth.version>5.3.20</identity.inbound.auth.oauth.version>
+        <identity.inbound.auth.saml.version>5.4.0-SNAPSHOT</identity.inbound.auth.saml.version>
+        <identity.inbound.auth.oauth.version>5.4.0-SNAPSHOT</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.2.1</identity.inbound.auth.openid.version>
         <identity.agent.sso.version>5.1.3</identity.agent.sso.version>
         <identity.outbound.auth.requestpath.basicauth.version>5.1.3</identity.outbound.auth.requestpath.basicauth.version>
@@ -1542,7 +1542,7 @@
         <!-- Authenticator Properties -->
         <identity.outbound.auth.oidc.version>5.1.3</identity.outbound.auth.oidc.version>
         <identity.outbound.auth.passive.sts.version>5.2.0</identity.outbound.auth.passive.sts.version>
-        <identity.outbound.auth.samlsso.version>5.1.6</identity.outbound.auth.samlsso.version>
+        <identity.outbound.auth.samlsso.version>5.2.0-SNAPSHOT</identity.outbound.auth.samlsso.version>
 
         <!-- Social Authenticator Properties -->
         <social.authenticator.facebook.version>5.1.4</social.authenticator.facebook.version>
