Fixing issues  in the migration client of 5.1.0 to 5.2.0

--- a/modules/migration/migration-5.1.0_to_5.2.0/wso2-is-migration-client/pom.xml
+++ b/modules/migration/migration-5.1.0_to_5.2.0/wso2-is-migration-client/pom.xml
@@ -90,7 +90,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Private-Package>
-                            org.wso2.carbon.is.migration.internal
+                            org.wso2.carbon.is.migration.client.internal
                         </Private-Package>
                         <Import-Package>
                             org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
