--- a/pom.xml
+++ b/pom.xml
@@ -1509,12 +1509,12 @@
     <properties>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.8.4</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.8.15</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
-        <identity.carbon.auth.saml2.version>5.2.1</identity.carbon.auth.saml2.version>
+        <identity.carbon.auth.saml2.version>5.2.2</identity.carbon.auth.saml2.version>
         <identity.inbound.auth.saml.version>5.3.2</identity.inbound.auth.saml.version>
-        <identity.inbound.auth.oauth.version>5.4.1</identity.inbound.auth.oauth.version>
+        <identity.inbound.auth.oauth.version>5.4.13</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.2.1</identity.inbound.auth.openid.version>
         <identity.agent.sso.version>5.1.5</identity.agent.sso.version>
         <identity.outbound.auth.requestpath.basicauth.version>5.1.3</identity.outbound.auth.requestpath.basicauth.version>
@@ -1538,8 +1538,8 @@
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
         <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>-->
         <identity.governance.version>1.0.4</identity.governance.version>
-        <carbon.identity.auth.version>1.1.2</carbon.identity.auth.version>
-        <identity.event.handler.account.lock.version>1.1.0</identity.event.handler.account.lock.version>
+        <carbon.identity.auth.version>1.1.3</carbon.identity.auth.version>
+        <identity.event.handler.account.lock.version>1.1.1-SNAPSHOT</identity.event.handler.account.lock.version>
         <identity.event.handler.notification.version>1.0.0</identity.event.handler.notification.version>
         <identity.app.authz.xacml.version>1.0.1</identity.app.authz.xacml.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
