--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -1705,6 +1705,12 @@
                                     <version>${carbon.identity.auth.version}</version>
                                 </feature>
 
+                                <!-- captcha for tomcat filter  -->
+			        <feature>
+                                    <id>org.wso2.carbon.identity.captcha.server.feature.group</id>
+                                    <version>${identity.governance.version}</version>
+                                </feature>
+
                             </features>
                         </configuration>
                     </execution>
