Update to IS 5.3.0 to 5.4.0 migration

--- a/modules/migration/migration-5.3.0_to_5.4.0/wso2-is-migration-client/pom.xml
+++ b/modules/migration/migration-5.3.0_to_5.4.0/wso2-is-migration-client/pom.xml
@@ -118,6 +118,10 @@
                             org.apache.commons.logging; version="${version.commons.logging}",
                             org.wso2.carbon.identity.core.*; version="${carbon.identity.framework.version}",
                         </Import-Package>
+                        <Export-Package>
+                            !org.wso2.carbon.is.migration.client.internal,
+                            org.wso2.carbon.is.migration.*;version="${project.version}"
+                        </Export-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
