--- a/pom.xml
+++ b/pom.xml
@@ -1509,7 +1509,7 @@
     <properties>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.8.70</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.8.72-SNAPSHOT</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
         <identity.carbon.auth.saml2.version>5.2.3</identity.carbon.auth.saml2.version>
