fixing build failure from twitter authenticator upgrade.

--- a/modules/connectors/pom.xml
+++ b/modules/connectors/pom.xml
@@ -41,7 +41,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
+                                    <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.twitter</groupId>
                                     <artifactId>org.wso2.carbon.extension.identity.authenticator.twitter.connector
                                     </artifactId>
                                     <version>${authenticator.twitter.version}</version>
