--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
     <url>http://wso2.org/projects/identity</url>
 
     <modules>
-        <module>modules/migration/migration-5.3.0_to_5.4.0/wso2-is-migration-client</module>
-	<module>modules/features</module>
+        <module>modules/migration/migration-service</module>
+	    <module>modules/features</module>
         <module>modules/p2-profile-gen</module>
         <module>modules/connectors</module>
         <module>modules/authenticators</module>
