--- a/pom.xml
+++ b/pom.xml
@@ -1573,6 +1573,15 @@
         <!--SAML Metadata-->
         <identity.metadata.saml.version>1.0.2</identity.metadata.saml.version>
 
+        <!-- Connectors -->
+
+        <authenticator.totp.version>2.0.6</authenticator.totp.version>
+        <authenticator.office365.version>1.0.0</authenticator.office365.version>
+        <authenticator.smsotp.version>2.0.8</authenticator.smsotp.version>
+        <authenticator.emailotp.version>2.0.8</authenticator.emailotp.version>
+        <authenticator.twitter.version>1.0.6</authenticator.twitter.version>
+        <authenticator.x509.version>2.0.2</authenticator.x509.version>
+
         <!-- Deprecated identity repos -->
         <identity.notification.email.version>5.1.1</identity.notification.email.version>
         <identity.notification.json.version>5.1.1</identity.notification.json.version>
